@@ -1,8 +1,8 @@
 package kr.co.orangenode.service;
 
+import kr.co.orangenode.dto.article.ArticleCateDTO;
 import kr.co.orangenode.dto.article.ArticleDTO;
 import kr.co.orangenode.dto.article.PageRequestDTO;
-
 import kr.co.orangenode.dto.article.PageResponseDTO;
 import kr.co.orangenode.entity.article.Article;
 import kr.co.orangenode.entity.article.ArticleCate;
@@ -18,6 +18,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -58,42 +59,40 @@ public class ArticleService {
     }
 
     public ResponseEntity<?> getCateList(){
-       List<ArticleCate> getCateList = articleCateRepository.findAll();
-       log.info("222222222222" + getCateList);
-       if(getCateList.isEmpty()){
-           log.info("33333333333333");
-           return ResponseEntity.status(HttpStatus.BAD_GATEWAY).body("Error!!");
-       }else{
-           log.info("444444444444");
-           return ResponseEntity.ok().body(getCateList);
-       }
+        List<ArticleCate> getCateList = articleCateRepository.findAll();
+        log.info("222222222222" + getCateList);
+        if (getCateList.isEmpty()) {
+            log.info("33333333333333");
+            return ResponseEntity.status(HttpStatus.BAD_GATEWAY).body("Error!!");
+        } else {
+            log.info("444444444444");
+            return ResponseEntity.ok().body(getCateList);
+        }
     }
 
     public ResponseEntity<?> getArticleList(PageRequestDTO pageRequestDTO, Pageable pageable){
         Page<Article> getArticleList = articleRepository.getArticleList(pageRequestDTO, pageable);
         log.info("카테별 게시글 서비스...1" + getArticleList);
-        
-        if(getArticleList.isEmpty()){
+
+        if (getArticleList.isEmpty()) {
             log.info("카테별 게시글 서비스...2 오류" );
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body("ERROR!!!!");
-        }else{
-
+        } else {
             List<ArticleDTO> articleDTOS = getArticleList.getContent().stream()
                     .map(article -> modelMapper.map(article, ArticleDTO.class))
-                    .toList();
+                    .collect(Collectors.toList());
 
-            log.info("카테별 게시글 서비스...3"+ articleDTOS);
+            log.info("카테별 게시글 서비스...3" + articleDTOS);
 
             int total = (int) getArticleList.getTotalElements();
 
             PageResponseDTO pageResponseDTO = PageResponseDTO.builder()
-                                                            .pageRequestDTO(pageRequestDTO)
-                                                            .dtoList(articleDTOS)
-                                                            .total(total)
-                                                            .build();
+                    .pageRequestDTO(pageRequestDTO)
+                    .dtoList(articleDTOS)
+                    .total(total)
+                    .build();
 
             return ResponseEntity.ok().body(pageResponseDTO);
-
         }
     }
 
@@ -101,5 +100,47 @@ public class ArticleService {
         return userService.userInfo(uid);
     }
 
+    public ResponseEntity<?> createCate(ArticleCateDTO articleCateDTO) {
+        try {
+            ArticleCate articleCate = modelMapper.map(articleCateDTO, ArticleCate.class);
+            ArticleCate savedCate = articleCateRepository.save(articleCate);
+            return ResponseEntity.ok().body(savedCate);
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body("Error creating category");
+        }
+    }
 
+    public ResponseEntity<ArticleDTO> getArticle(int ano) {
+        Optional<Article> articleOptional = articleRepository.findById(ano);
+
+        if (articleOptional.isPresent()) {
+            Article article = articleOptional.get();
+            ArticleDTO articleDTO = modelMapper.map(article, ArticleDTO.class);
+            return ResponseEntity.ok(articleDTO);
+        } else {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
+        }
+    }
+
+
+    public ArticleDTO addComment(int parentAno, String content, String uid) {
+        Optional<Article> parentArticle = articleRepository.findById(parentAno);
+        if (parentArticle.isPresent()) {
+            Article comment = Article.builder()
+                    .content(content)
+                    .uid(uid)
+                    .parent(String.valueOf(parentAno))
+                    .build();
+            Article savedComment = articleRepository.save(comment);
+            return modelMapper.map(savedComment, ArticleDTO.class);
+        }
+        throw new RuntimeException("Article not found");
+    }
+
+    public List<ArticleDTO> getComments(int parentAno) {
+        List<Article> comments = articleRepository.findByParent(String.valueOf(parentAno));
+        return comments.stream()
+                .map(article -> modelMapper.map(article, ArticleDTO.class))
+                .collect(Collectors.toList());
+    }
 }
